--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,5 +21,23 @@ services:
     working_dir: /go/src/github.com/calmato/presto-pay/api/user
     volumes:
       - ./api/user:/go/src/github.com/calmato/presto-pay/api/user:cached
-      - ./secrets:/secrets:cached
+      - ./secrets:/secrets
     command: realize start
+
+  swagger_viewer:
+    container_name: presto_pay_swagger_viewer
+    build:
+      context: ./infra/docker/swagger/viewer
+    volumes:
+      - ./docs/12_backend/21_swagger/apiv1.yaml:/swagger.yaml:cached
+    ports:
+      - 8000:8080
+    environment:
+      SWAGGER_JSON: /swagger.yaml
+
+  swagger_editor:
+    container_name: presto_pay_swagger_editor
+    build:
+      context: ./infra/docker/swagger/editor
+    ports:
+      - 8001:8080
