--- a/.github/workflows/cd-user-api.yaml
+++ b/.github/workflows/cd-user-api.yaml
@@ -1,8 +1,8 @@
 name: User API(Golang) Deploy to Staging
 on:
   push:
-    paths:
-      - 'api/user/**'
+    # paths:
+    #   - 'api/user/**'
     branches:
       - master
 
@@ -28,8 +28,8 @@ jobs:
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           version: '281.0.0'
-          service_account_email: ${GCP_SA_EMAIL}
-          service_account_key: ${GCP_SA_KEY}
+          service_account_email: ${{ GCP_SA_EMAIL }}
+          service_account_key: ${{ GCP_SA_KEY }}
           export_default_credentials: true
 
       - name: Configure gcloud
