--- a/native/ios/.gitignore
+++ b/native/ios/.gitignore
@@ -81,3 +81,10 @@ fastlane/test_output
 iOSInjectionProject/
 
 # End of https://www.gitignore.io/api/swift
+
+# Firebase configuration
+GoogleService-Info.plist
+
+# CocoaPods libraries
+Pods/
+!Pods/.keep
