--- a/.env.temp
+++ b/.env.temp
@@ -1,2 +1,3 @@
 GOOGLE_APPLICATION_CREDENTIALS=/secrets/xxxxxx-firebase-adminsdk-xxxxxx.json
+TERRAFORM_CREDENTIALS=/secrets/xxxxxx-xxxxxx.json
 GCP_STORAGE_BUCKET_NAME=xxxxxx.appspot.com
