--- a/native/android/app/src/main/AndroidManifest.xml
+++ b/native/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
   package="work.calmato.prestopay">
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <!--Adding Read External Storage Permission-->
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <application
     android:networkSecurityConfig="@xml/network_security_config"
     android:allowBackup="true"
