--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
   compileSdkVersion 28
@@ -35,10 +36,11 @@ dependencies {
   androidTestImplementation 'androidx.test.ext:junit:1.1.1'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
   implementation 'com.google.android.material:material:1.1.0'
+  implementation group: 'org.json', name: 'json', version: '20170516'
   implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.6'
+  implementation 'com.google.firebase:firebase-analytics:17.2.2'
   implementation 'com.google.code.gson:gson:2.8.6'
   implementation 'com.squareup.retrofit2:retrofit:2.3.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
   implementation 'com.squareup.okhttp3:okhttp:3.9.0'
-  implementation group: 'org.json', name: 'json', version: '20170516'
 }
