--- a/.github/workflows/ci-android.yaml
+++ b/.github/workflows/ci-android.yaml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Build debug APK
         working-directory: naitive/android
-        run: ./gradlew assembleDebug --stacktrace
+        run: bash ./gradlew assembleDebug --stacktrace
 
       - name: Create APK artifact
         uses: actions/upload-artifact@v1
