--- a/.github/workflows/ci-android.yaml
+++ b/.github/workflows/ci-android.yaml
@@ -25,8 +25,6 @@ jobs:
       - name: Run Unit tests
         working-directory: native/android
         run: ./gradlew test --stacktrace
-          ls -la .
-          ./gradlew test
 
   apk:
     name: Generate APK
@@ -41,8 +39,8 @@ jobs:
           java-version: 1.8
 
       - name: Build debug APK
-        working-directory: naitive/android
-        run: bash ./gradlew assembleDebug --stacktrace
+        working-directory: native/android
+        run: ./gradlew assembleDebug --stacktrace
 
       - name: Create APK artifact
         uses: actions/upload-artifact@v1
