--- a/.github/workflows/ci-android.yaml
+++ b/.github/workflows/ci-android.yaml
@@ -27,7 +27,11 @@ jobs:
 
       - name: Create google-services.json
         working-directory: ./native/android/app
-        run: echo ${ANDROID_SECRET} > google-services.json
+        run: |
+          echo ${ANDROID_SECRET} > google-services.json
+          echo '--- debug --------'
+          cat google-services.json
+          echo '------------------'
 
       - name: Run Unit tests
         working-directory: native/android
@@ -44,6 +48,16 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      - name: Create google-services.json
+        working-directory: ./native/android/app
+        env:
+          ANDROID_SECRET: ${{ secret.STG_ANDROID_SECRET }}
+        run: |
+          echo ${ANDROID_SECRET} > google-services.json
+          echo '--- debug --------'
+          cat google-services.json
+          echo '------------------'
 
       - name: Build debug APK
         working-directory: native/android
