--- a/.github/workflows/ci-android.yaml
+++ b/.github/workflows/ci-android.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Create google-services.json
         working-directory: ./native/android/app
         run: |
-          echo ${ANDROID_SECRET} > google-services.json
+          echo -n ${ANDROID_SECRET} > google-services.json
           echo '--- debug --------'
           cat google-services.json
           echo '------------------'
@@ -54,7 +54,7 @@ jobs:
         env:
           ANDROID_SECRET: ${{ secrets.STG_ANDROID_SECRET }}
         run: |
-          echo ${ANDROID_SECRET} > google-services.json
+          echo -n ${ANDROID_SECRET} > google-services.json
           echo '--- debug --------'
           cat google-services.json
           echo '------------------'
