--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -43,11 +43,11 @@ dependencies {
   implementation 'com.squareup.retrofit2:retrofit:2.3.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
   implementation 'com.squareup.okhttp3:okhttp:3.9.0'
-  def nav_version = "2.3.0-alpha05"
-  implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-  implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-  // Dynamic Feature Module Support
-  implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-  // Testing Navigation
-  androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+//  def nav_version = "2.3.0-alpha05"
+//  implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+//  implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+//  // Dynamic Feature Module Support
+//  implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+//  // Testing Navigation
+//  androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"nav_version
 }
