feat: Create admin container

--- a/.env.temp
+++ b/.env.temp
@@ -1,3 +1,6 @@
 GOOGLE_APPLICATION_CREDENTIALS=/secrets/xxxxxx-firebase-adminsdk-xxxxxx.json
-TERRAFORM_CREDENTIALS=/secrets/xxxxxx-terraform-xxxxxx.json
 GCP_STORAGE_BUCKET_NAME=xxxxxx.appspot.com
+TERRAFORM_CREDENTIALS=/secrets/xxxxxx-terraform-xxxxxx.json
+FIREBASE_API_KEY=xxxxxx
+FIREBASE_PROJECT_ID=xxxxxx
+FIREBASE_MESSAGING_SENDER_ID=xxxxxx
