--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,6 +45,20 @@ services:
     ports:
       - 8001:8080
 
+  admin:
+    container_name: presto_pay_admin
+    build:
+      context: ./infra/docker/web/admin
+      dockerfile: Dockerfile_development
+    working_dir: /web/admin
+    ports:
+      - 3000:3000
+    environment:
+      - FIREBASE_API_KEY=${FIREBASE_API_KEY}
+      - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
+      - FIREBASE_MESSAGING_SENDER_ID=${FIREBASE_MESSAGING_SENDER_ID}
+    command: yarn dev -H 0.0.0.0 -p 3000
+
   terraform:
     container_name: presto_pay_terraform
     build: ./infra/docker/terraform
