--- a/web/admin/package.json
+++ b/web/admin/package.json
@@ -12,8 +12,9 @@
     "lint": "eslint --ext .js,ts,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@nuxt/typescript-runtime": "^0.4.0"
+    "@nuxt/typescript-runtime": "^0.4.0",
+    "firebase": "^7.14.5",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
@@ -21,8 +22,8 @@
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1"
   }
