--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-kapt'
-//apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'androidx.navigation.safeargs'
 
 android {
   compileSdkVersion 28
@@ -46,7 +46,7 @@ dependencies {
   implementation 'com.google.code.gson:gson:2.8.6'
   implementation 'com.squareup.retrofit2:retrofit:2.3.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-  implementation 'com.squareup.okhttp3:okhttp:3.12.12'
+  implementation 'com.squareup.okhttp3:okhttp:3.9.0'
   def nav_version = "2.3.0-alpha05"
   implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
   implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
@@ -54,5 +54,4 @@ dependencies {
   implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
   // Testing Navigation
   androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-
 }
