--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -22,6 +22,9 @@ android {
   }
 
   buildTypes {
+    customDebugType {
+      debuggable true
+    }
     release {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
