--- a/web/admin/package.json
+++ b/web/admin/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.0",
     "firebase": "^7.14.5",
+    "firebaseui": "^4.5.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
