java versionの変更でエラーをなくした

--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'androidx.navigation.safeargs'
 
 android {
   compileSdkVersion 28
+  buildToolsVersion "28.0.3"
+
   dataBinding {
     enabled = true
   }
