--- a/.github/workflows/ci-android-on-master-branch.yaml
+++ b/.github/workflows/ci-android-on-master-branch.yaml
@@ -1,8 +1,8 @@
 name: Android Test with Firebase
 on:
   push:
-    paths:
-      - 'native/android/**'
+#     paths:
+#       - 'native/android/**'
     branches:
       - master
 
