--- a/infra/kubernetes/stg/service.yaml
+++ b/infra/kubernetes/stg/service.yaml
@@ -35,7 +35,26 @@ spec:
 #       port: 80
 #       targetPort: 3000
 
-# ---
+---
+
+apiVersion: v1
+kind: Service
+
+metadata:
+  name: prometheus
+  namespace: monitoring
+
+spec:
+  selector:
+    app: prometheus
+
+  type: LoadBalancer
+  ports:
+  - name: http
+    protocol: TCP
+    port: 80
+    targetPort: 9090
+
 
 # apiVersion: v1
 # kind: Service
@@ -57,48 +76,48 @@ spec:
 #       port: 9090
 #       targetPort: 9090
 
-# ---
+---
 
-# apiVersion: v1
-# kind: Service
+apiVersion: v1
+kind: Service
 
-# metadata:
-#   name: kube-state-metrics
-#   namespace: monitoring
-#   annotations:
-#     prometheus.io/scrape: 'true'
+metadata:
+  name: kube-state-metrics
+  namespace: monitoring
+  annotations:
+    prometheus.io/scrape: 'true'
 
-# spec:
-#   selector:
-#     app: kube-state-metrics
+spec:
+  selector:
+    app: kube-state-metrics
 
-#   type: NodePort
-#   ports:
-#     - name: tcp
-#       protocol: TCP
-#       port: 8080
-#       targetPort: 8080
+  type: NodePort
+  ports:
+    - name: tcp
+      protocol: TCP
+      port: 8080
+      targetPort: 8080
 
-# ---
+---
 
-# apiVersion: v1
-# kind: Service
+apiVersion: v1
+kind: Service
 
-# metadata:
-#   name: prometheus-node-exporter
-#   namespace: monitoring
-#   annotations:
-#     prometheus.io/scrape: 'true'
+metadata:
+  name: prometheus-node-exporter
+  namespace: monitoring
+  annotations:
+    prometheus.io/scrape: 'true'
 
-# spec:
-#   selector:
-#     app: prometheus
-#     component: node-exporter
+spec:
+  selector:
+    app: prometheus
+    component: node-exporter
 
-#   type: ClusterIP
-#   clusterIP: None
-#   ports:
-#     - name: tcp
-#       protocol: TCP
-#       port: 9100
-#       targetPort: 9100
+  type: ClusterIP
+  clusterIP: None
+  ports:
+    - name: tcp
+      protocol: TCP
+      port: 9100
+      targetPort: 9100
