--- a/infra/kubernetes/stg/deployment-prometheus.yaml
+++ b/infra/kubernetes/stg/deployment-prometheus.yaml
@@ -69,6 +69,8 @@ spec:
           ports:
             - containerPort: 8080
           resources:
+            requests:
+              cpu: 20m
             limits:
               cpu: 50m
               memory: 100Mi
